--- a/Front-end/public/cadastro-movel.html
+++ b/Front-end/public/cadastro-movel.html
@@ -31,7 +31,7 @@
 	<div id="container">	
 	<header class="page-header">
             <div class="top-bar-container">
-                <a href="/">
+                <a href="lista-movel.html">
                     <img src="/assets/back.svg" alt="Voltar">
                 </a>
                 <img src="/assets/logo.png" alt="Teixeira Móveis">
