--- a/Front-end/public/carrinho.html
+++ b/Front-end/public/carrinho.html
@@ -6,71 +6,74 @@
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Lista de móveis - Teixeira Móveis</title>
+
+    <title>Login - Teixeira Móveis</title>
+
     <link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/vue.js"></script>
+
+	 <link rel="shortcut icon" href="assets/TM_Logo.png" type="image/png">
+
+	<link rel="stylesheet" href="/styles/main.css">
+	<link rel="stylesheet" href="/styles/partials/header.css">
+
+	<link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
+
 </head>
 
 <body>
 		
         <div id="app">
-		<div id="topo"> 
-			<img src="Cima.jpg" alt="some text"/>
-		</div>
-		
-		
-		
-		<header></header>
+		<header class="page-header">
+            <div class="top-bar-container">
+                <a href="login.html">
+                    <img src="/../assets/back.svg" alt="Voltar">
+                </a>
+                <img src="/../assets/logo.png" alt="Teixeira Móveis">
+            </div>
+
+            <div class="header-content">
+                <strong>Seja bem vindo!<br/>Vamos as compras</strong>
+                <p>Esses são os itens do seu carrinho</p>
+            </div>
+        </header>
+	
 		<input type="checkbox" id="chk">
 		<label for="chk" class="menu-icon">&#9776;</label>
 			
 		<div class="bg"></div>
 		<nav class="menu" id="principal">
 			<ul>
-				<li><a href="" class="voltar">Voltar</a></li>
+				<li><a href="" class="voltar">Fechar</a></li>
 				<li><a href="index.html">Tela Inicial</a></li>
 				<li><a href="stock-listing.html">Catálogo</a></li>
 				<li><a href="customer-registration.html">Cadastro</a></li>
-				<li><a href="login.html">Login</a></li>
+				
 			</ul>
 		</nav>
 		
-		<h4 align="center"><b> <font color=#191970> Móveis cadastrados: </font> </b></h4><br>
-		<div class="container">
-	
-	<br><table border="1px">
-			<tr align="center">
-			<!-- criando campos da tabela e alterando a cor -->
-				<td width="101" bgcolor="#e9e9e9"><b>Nome</b></td>
-				<td width="113" bgcolor="#e9e9e9"><b>Número de série</b></td>
-				<td width="140" bgcolor="#e9e9e9"><b>Descrição</b></td>
-				<td width="153" bgcolor="#e9e9e9"><b>Quantidade</b></td>
-				<td width="160" bgcolor="#e9e9e9"><b>Tipo de Produto</b></td>
+		
+		<h2 align="center"><b> <font color=#191970> Você ainda não selecionou nenhum item! </font> 
+		<img id="carinha" src="/../assets/triste.png" alt="carinha triste"></b></h2><br>
+
+		<div class="container" align="center">
+		<form action="/stock-listing.html" onsubmit="return enviarDados();">
+		<table>	
+			
+			<tr id="campo3"> 
+				<td id="vazio"></td>
+				<td><input id="botao" type="submit" value="Ver Catálogo"></td>
 			</tr>
-			<tr align="center">
-				<td height="40"><a href="stock-listing.html" target="_blank">Mesa De Jantar 6 Lugares</a></td>
-				<td>89604a5a</td>
-				<td>Mesa de madeira com acabamento refinado, composta por MDP e MDF de 15 mm</td>
-				<td>2</td>
-				<td>sala</td>
-			</tr>
-			<tr align="center">
-				<td height="40">Cama Box Quitquero</td>
-				<td>6035656434</td>
-				<td>Cama box reforçada com acochoamentos laterais e cabeceira iluminada.</td>
-				<td>1</td>
-				<td>quarto</td>
-			</tr>
-		</table><br>
-			  <p align="center"><a href="cadastro-movel.html" target="_blank">Cadastrar móveis</a><p>
-	
+		</table>
+		</form>
 			</div>
 		</div>
-		
+
+
     <script>
         var app = new Vue({
             el: "#app",
@@ -117,6 +120,25 @@
         });
     </script>
 	
+	<script>
+		function enviarDados(){
+			var cpf = document.getElementById("cpf").value;
+			var senha = document.getElementById("senha").value;
+			
+			
+
+
+					if(cpf.length <= 10 || cpf.length > 11 || cpf != '60359256341')
+						alert('CPF invalido');
+					else{
+						if(senha <= 5 || senha != '123456')
+							alert('Sua senha deve ter pelo menos 6 caracteres ou está errada!');
+						else
+							alert('Login realizado com sucesso!');
+						}
+				}
+		
+	</script>
 	
 	<style>
 	img {
@@ -135,19 +157,11 @@
 	body {
 		font-family: Arial, Helvetica, sans-serif;
 		width:100%;
-	}
-	
+	}	
 	
 * {
 	margin:0;
 	padding:0;
-	}
-
-header{
-	width: 100%;
-
-	left:0;
-	background-color: #5b859a;
 	}
 	
 	.menu-icon{
@@ -167,10 +181,10 @@ header{
 		}
 		
 	.menu-icon:hover{
-		background-color: #fff;
-		color: #87ceeb;
+		background-color: #9C98A6;
+		color: #fff;
 		}
-	
+
 	#chk{
 		display: none;
 		}
@@ -186,7 +200,7 @@ header{
 	}
 	
 	#principal{
-		width: 300px;
+		width: 200px;
 		left: -300px;
 	}
 	
@@ -196,13 +210,15 @@ header{
 	
 	ul li a{
 		display: block;
-		font-size: 18px;
-		font-family: 'Arial';
+		font: 1.6rem Archivo;
 		padding: 10px;
 		border-bottom: solid 1px #000;
-		color: #000;
+		color: var(--color-text-title);
 		text-decoration: none;
 		transition: all .2s;
+		display: flex;
+    	align-items: center;
+    	justify-content: center;
 	}
 	
 	ul li span{
@@ -211,7 +227,7 @@ header{
 	}
 	
 	ul li a:hover{
-		background-color: #87ceeb;
+		background-color:  #9C98A6;
 	}
 	
 	.voltar{
@@ -253,7 +269,81 @@ header{
 	position: absolute;
 	bottom: 0px;
 	}
+
+	#botao {
+    width: 150px;
+    height: 5.6rem;
+    background: var(--color-secondary);
+    color: var(--color-button-text);
+    border: 0;
+    border-radius: .8rem;
+    cursor: pointer;
+    font: 700 1.6rem Archivo;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+
+    transition: 0.2s;
+	margin: 17px 0px 0px 50px;
+    
+	}
 	
+	
+	#botao:hover {
+		background: var(--color-secondary-dark);
+	}
+
+	
+	#campo1,
+	#campo2,
+	h2,
+	#soufuncionario {
+		font-size: 1.4rem;
+		color: var(--color-text-complement);
+	}
+
+	h2{
+	 font: 1.6rem Archivo;
+	 margin: 17px 0px 0px 100px;
+	}
+
+	#soufuncionario{
+		margin: 17px 0px 0px 50px;
+	}
+	#campo1,
+	#campo2 {
+    width: 100%;
+    height: 5.6rem;
+    margin-top: 0.8rem;
+    border-radius: 0.8rem;
+    background: var(--color-input-background);
+    border: 1px solid var(--color-line-in-write);
+    outline: 0;
+    padding: 0 1.6rem;
+    font: 1.6rem Archivo;
+	margin-left: 22px
+	
+	}
+
+
+	#campo1,
+	#campo2 {
+    position: relative;
+	}
+
+	#cpf,
+	#senha {
+    font: 700 14px Archivo;
+    color: var(--color-text-title);
+	}
+
+	#carinha{
+	width:45px;
+	margin: 5px 0px -20px 10px;
+	
+	}
 	</style>
 </body>
 
