--- a/Front-end/public/login-funcionario.html
+++ b/Front-end/public/login-funcionario.html
@@ -13,14 +13,31 @@
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/vue.js"></script>
+
+	 <link rel="shortcut icon" href="assets/TM_Logo.png" type="image/png">
+
+	<link rel="stylesheet" href="/styles/main.css">
+	<link rel="stylesheet" href="/styles/partials/header.css">
+
+	<link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
 </head>
 
 <body>
 		
         <div id="app">
-		<div id="topo"> 
-			<img src="/../assets/Cima.jpg" alt="some text"/>
-		</div>
+		<header class="page-header">
+            <div class="top-bar-container">
+                <a href="login.html">
+                    <img src="/../assets/back.svg" alt="Voltar">
+                </a>
+                <img src="/../assets/logo.png" alt="Teixeira Móveis">
+				
+            </div>
+            <div class="header-content">
+                <strong>Seja bem vindo funcionário!<br/>Vamos trabalhar</strong>
+                <p>O primeiro passo, é realizar o login no nosso sistema</p>
+            </div>
+        </header>
 		
 		
 		
@@ -31,38 +48,36 @@
 		<div class="bg"></div>
 		<nav class="menu" id="principal">
 			<ul>
-				<li><a href="" class="voltar">Voltar</a></li>
+				<li><a href="" class="voltar">Fechar</a></li>
 				<li><a href="index.html">Tela Inicial</a></li>
 				<li><a href="stock-listing.html">Catálogo</a></li>
-				<li><a href="/login">Listar Clientes</a></li>
-				<li><a href="login.html">Login</a></li>
+				<li><a href="lista-movel.html">Ver estoque</a></li>
+				<li><a href="/login">Clientes cadastrados</a></li>
 			</ul>
 		</nav>
 		
 		
-		<h2 align="center"><b> <font color=#191970> Logue-se Aqui! </font> </b></h2><br>
+		<h2 align="center"><b> <font color=#191970> Logue-se Aqui! </font></b> <img id="funcionario" src="/../assets/funcionario.png" alt="funcionario"></h2><br>
 		<div class="container" align="center">
 		<form action="login-funcionario.html" onsubmit="return enviarDados();">
 		<table>	
 			<tr>
-				<td>CPF: </td>
-				<td><input type="text" name="cpf" id="cpf" required="required"></td>
+				<td id="cpf"> CPF: </td>
+				<td><input id="campo1" type="text" name="cpf" id="cpf" required="required"></td>
 			</tr>
 			<tr>
-				<td>Senha: </td>
-				<td><input type="password" name="senha" id="senha" required="required"></td>
+				<td id="senha">Senha: </td>
+				<td><input id="campo2" input type="password" name="senha" id="senha" required="required"></td>
 			</tr>
-			<tr> 
-				<td><br><input type="submit" value="Login"></td>
+			<tr id="campo3"> 
+				<td id="vazio"></td>
+				<td><br><input id="botao" type="submit" value="Login"></td>
 			</tr>
 		</table>
 	</form>
-			
-			
 			</div>
 		</div>
 		
-		</div>
     <script>
         var app = new Vue({
             el: "#app",
@@ -178,8 +193,8 @@ header{
 		}
 		
 	.menu-icon:hover{
-		background-color: #fff;
-		color: #87ceeb;
+		background-color: #9C98A6;
+		color: #fff;
 		}
 	
 	#chk{
@@ -197,7 +212,7 @@ header{
 	}
 	
 	#principal{
-		width: 300px;
+		width: 200px;
 		left: -300px;
 	}
 	
@@ -207,13 +222,15 @@ header{
 	
 	ul li a{
 		display: block;
-		font-size: 18px;
-		font-family: 'Arial';
+		font: 1.6rem Archivo;
 		padding: 10px;
 		border-bottom: solid 1px #000;
-		color: #000;
+		color: var(--color-text-title);
 		text-decoration: none;
 		transition: all .2s;
+		display: flex;
+    	align-items: center;
+    	justify-content: center;
 	}
 	
 	ul li span{
@@ -222,7 +239,7 @@ header{
 	}
 	
 	ul li a:hover{
-		background-color: #87ceeb;
+		background-color: #9C98A6;
 	}
 	
 	.voltar{
@@ -265,6 +282,74 @@ header{
 	bottom: 0px;
 	}
 	
+	#botao {
+    width: 150px;
+    height: 5.6rem;
+    background: var(--color-secondary);
+    color: var(--color-button-text);
+    border: 0;
+    border-radius: .8rem;
+    cursor: pointer;
+    font: 700 1.6rem Archivo;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+
+    transition: 0.2s;
+	margin: 17px 0px 0px 50px;
+    
+	}
+	
+	#botao:hover {
+		background: var(--color-secondary-dark);
+	}
+
+	#campo1,
+	#campo2,
+	h2 {
+		font-size: 1.4rem;
+		color: var(--color-text-complement);
+	}
+
+	h2{
+	 font: 1.6rem Archivo;
+	 margin: 17px 0px 0px 100px;
+	}
+
+	#campo1,
+	#campo2 {
+    width: 100%;
+    height: 5.6rem;
+    margin-top: 0.8rem;
+    border-radius: 0.8rem;
+    background: var(--color-input-background);
+    border: 1px solid var(--color-line-in-write);
+    outline: 0;
+    padding: 0 1.6rem;
+    font: 1.6rem Archivo;
+	margin-left: 22px
+	
+	}
+
+
+	#campo1,
+	#campo2 {
+    position: relative;
+	}
+
+	#cpf,
+	#senha {
+    font: 700 14px Archivo;
+    color: var(--color-text-title);
+	}
+
+	#funcionario{
+	width:40px;
+	margin: 0px 0px -15px 20px;
+	}
+
 	</style>
 </body>
 
