--- a/Front-end/public/login.html
+++ b/Front-end/public/login.html
@@ -6,64 +6,80 @@
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+
     <title>Login - Teixeira Móveis</title>
+
     <link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/vue.js"></script>
+
+	 <link rel="shortcut icon" href="assets/TM_Logo.png" type="image/png">
+
+	<link rel="stylesheet" href="/styles/main.css">
+	<link rel="stylesheet" href="/styles/partials/header.css">
+
+	<link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
+
 </head>
 
 <body>
 		
         <div id="app">
-		<div id="topo"> 
-			<img src="/../assets/Cima.jpg" alt="some text"/>
-		</div>
-		
-		
-		
-		<header></header>
+		<header class="page-header">
+            <div class="top-bar-container">
+                <a href="/">
+                    <img src="/../assets/back.svg" alt="Voltar">
+                </a>
+                <img src="/../assets/logo.png" alt="Teixeira Móveis">
+            </div>
+
+            <div class="header-content">
+                <strong>Seja bem vindo!<br/>Vamos as compras</strong>
+                <p>O primeiro passo, é realizar o login no nosso sistema</p>
+            </div>
+        </header>
+	
 		<input type="checkbox" id="chk">
 		<label for="chk" class="menu-icon">&#9776;</label>
 			
 		<div class="bg"></div>
 		<nav class="menu" id="principal">
 			<ul>
-				<li><a href="" class="voltar">Voltar</a></li>
+				<li><a href="" class="voltar">Fechar</a></li>
 				<li><a href="index.html">Tela Inicial</a></li>
 				<li><a href="stock-listing.html">Catálogo</a></li>
 				<li><a href="customer-registration.html">Cadastro</a></li>
-				<li><a href="login.html">Login</a></li>
+				<li><a href="carrinho.html">Ver carrinho</a></li>
 			</ul>
 		</nav>
 		
 		
 		<h2 align="center"><b> <font color=#191970> Logue-se Aqui! </font> </b></h2><br>
 		<div class="container" align="center">
-		<form action="/login.html" onsubmit="return enviarDados();">
+		<form action="/stock-listing.html" onsubmit="return enviarDados();">
 		<table>	
 			<tr>
-				<td>CPF: </td>
-				<td><input type="text" name="matricula" id="cpf" required="required"></td>
-			</tr>
-			<tr>
-				<td>Senha: </td>
-				<td><input type="password" name="senha" id="senha" required="required"></td>
+				<td id="cpf"> CPF: </td>
+				<td><input id="campo1" type="text" name="matricula" id="cpf" required="required"></td>
 			</tr>
 			<tr> 
-				<td><br><input type="submit" value="Login"></td>
+				<td id="senha">Senha: </td>
+				<td><input id="campo2" type="password" name="senha" id="senha" required="required"></td>
+			</tr>
+			<tr id="campo3"> 
+				<td id="vazio"></td>
+				<td><input id="botao" type="submit" value="Login"></td>
 			</tr>
 		</table>
-	</form>
-			  <div class="container">
-			  <br><h6 align='center'><a href = 'login-funcionario.html'>Sou funcionário</a></h6>
+		</form>
+			<div class="container">
+			  <br><h6 align='center'><a id="soufuncionario" href = 'login-funcionario.html'>Sou funcionário</a><img id="funcionario" src="/../assets/funcionario.png" alt="funcionario"></h6>
 			</div>
 			
 			</div>
-		</div>
-		
 		</div>
 
 
@@ -150,19 +166,11 @@
 	body {
 		font-family: Arial, Helvetica, sans-serif;
 		width:100%;
-	}
-	
+	}	
 	
 * {
 	margin:0;
 	padding:0;
-	}
-
-header{
-	width: 100%;
-
-	left:0;
-	background-color: #5b859a;
 	}
 	
 	.menu-icon{
@@ -182,10 +190,10 @@ header{
 		}
 		
 	.menu-icon:hover{
-		background-color: #fff;
-		color: #87ceeb;
+		background-color: #9C98A6;
+		color: #fff;
 		}
-	
+
 	#chk{
 		display: none;
 		}
@@ -201,7 +209,7 @@ header{
 	}
 	
 	#principal{
-		width: 300px;
+		width: 200px;
 		left: -300px;
 	}
 	
@@ -211,13 +219,15 @@ header{
 	
 	ul li a{
 		display: block;
-		font-size: 18px;
-		font-family: 'Arial';
+		font: 1.6rem Archivo;
 		padding: 10px;
 		border-bottom: solid 1px #000;
-		color: #000;
+		color: var(--color-text-title);
 		text-decoration: none;
 		transition: all .2s;
+		display: flex;
+    	align-items: center;
+    	justify-content: center;
 	}
 	
 	ul li span{
@@ -226,7 +236,7 @@ header{
 	}
 	
 	ul li a:hover{
-		background-color: #87ceeb;
+		background-color:  #9C98A6;
 	}
 	
 	.voltar{
@@ -268,7 +278,81 @@ header{
 	position: absolute;
 	bottom: 0px;
 	}
+
+	#botao {
+    width: 150px;
+    height: 5.6rem;
+    background: var(--color-secondary);
+    color: var(--color-button-text);
+    border: 0;
+    border-radius: .8rem;
+    cursor: pointer;
+    font: 700 1.6rem Archivo;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+
+    transition: 0.2s;
+	margin: 17px 0px 0px 50px;
+    
+	}
 	
+	
+	#botao:hover {
+		background: var(--color-secondary-dark);
+	}
+
+	
+	#campo1,
+	#campo2,
+	h2,
+	#soufuncionario {
+		font-size: 1.4rem;
+		color: var(--color-text-complement);
+	}
+
+	h2{
+	 font: 1.6rem Archivo;
+	 margin: 17px 0px 0px 100px;
+	}
+
+	#soufuncionario{
+		margin: 17px 0px 0px 50px;
+	}
+	#campo1,
+	#campo2 {
+    width: 100%;
+    height: 5.6rem;
+    margin-top: 0.8rem;
+    border-radius: 0.8rem;
+    background: var(--color-input-background);
+    border: 1px solid var(--color-line-in-write);
+    outline: 0;
+    padding: 0 1.6rem;
+    font: 1.6rem Archivo;
+	margin-left: 22px
+	
+	}
+
+
+	#campo1,
+	#campo2 {
+    position: relative;
+	}
+
+	#cpf,
+	#senha {
+    font: 700 14px Archivo;
+    color: var(--color-text-title);
+	}
+
+	#funcionario{
+	width:30px;
+	margin: 5px 0px -20px 10px;
+	
+	}
 	</style>
 </body>
 
