Refatorando o Front-and

--- a/Front-end/public/cadastro-movel.html
+++ b/Front-end/public/cadastro-movel.html
@@ -20,10 +20,10 @@
 
 	<link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
 	
-    <script src="js/jquery.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/vue.js"></script>
+    <script src="scripts/jquery.min.js"></script>
+    <script src="scripts/popper.min.js"></script>
+    <script src="scripts/bootstrap.min.js"></script>
+    <script src="scripts/vue.js"></script>
 </head>
 
 <body id="page-customer-registration">
