--- a/Front-end/public/login.html
+++ b/Front-end/public/login.html
@@ -9,12 +9,12 @@
 
     <title>Login - Teixeira Móveis</title>
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="/styles/partials/bootstrap.min.css">-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="js/jquery.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/vue.js"></script>
+    <script src="scripts/jquery.min.js"></script>
+    <script src="scripts/popper.min.js"></script>
+    <script src="scripts/bootstrap.min.js"></script>
+    <script src="scripts/vue.js"></script>
 
 	 <link rel="shortcut icon" href="assets/TM_Logo.png" type="image/png">
 
