Backend e Frontend de CRUD Móveis

--- a/Front-end/public/login-funcionario.html
+++ b/Front-end/public/login-funcionario.html
@@ -51,7 +51,7 @@
 				<li><a href="" class="voltar">Fechar</a></li>
 				<li><a href="index.html">Tela Inicial</a></li>
 				<li><a href="stock-listing.html">Catálogo</a></li>
-				<li><a href="lista-movel.html">Ver estoque</a></li>
+				<li><a href="/furnitures">Ver estoque</a></li>
 				<li><a href="/login">Clientes cadastrados</a></li>
 			</ul>
 		</nav>
