--- a/Front-end/public/index.html
+++ b/Front-end/public/index.html
@@ -12,9 +12,7 @@
 
   <link rel="stylesheet" href="/styles/partials/page-landing.css">
 
-  <link
-    href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
   <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">-->
 
@@ -30,5 +28,4 @@
   </div>
   <!-- built files will be auto injected -->
 </body>
-
 </html>
